packages/apexlink/tests/resources/core-crm/main/objects/Account/fields/AccountNumber2__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber2__c</fullName>
    <description>Account number</description>
    <inlineHelpText>The account number 2</inlineHelpText>
    <label>Account Number2</label>
    <length>225</length>
    <trackHistory>true</trackFeedHistory>
    <type>Text</type>
</CustomField>