packages/apexlink/tests/resources/core-crm/main/objects/Account/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Account number</description>
    <inlineHelpText>The account number</inlineHelpText>
    <label>Account Number</label>
    <length>235</length>
    <type>Text</type>
</CustomField>